Loja: Model, API e testes
